Quito la rueda que permite cambiar el layout.

--- a/GestionDocente.MVCAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/GestionDocente.MVCAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <!-- [ Main Content ] end -->
     @await Html.PartialAsync("~/Views/Shared/_footer-block.cshtml")
     @await Html.PartialAsync("~/Views/Shared/_footer-js.cshtml")
-    @await Html.PartialAsync("~/Views/Shared/_customizer.cshtml")
+    @* @await Html.PartialAsync("~/Views/Shared/_customizer.cshtml") *@
     @await RenderSectionAsync("scripts", required: false)
 
 </body>
