--- a/GestionDocente.MVCAspNetCoreApp/Views/Shared/_sidebar.cshtml
+++ b/GestionDocente.MVCAspNetCoreApp/Views/Shared/_sidebar.cshtml
@@ -2,10 +2,11 @@
 <nav class="pc-sidebar">
   <div class="navbar-wrapper">
     <div class="m-header">
-      <a href="@Url.Action("Index", "Dashboard")" class="b-brand text-primary">
+      <a href="@Url.Action("Index", "Home")" class="b-brand text-primary">
         <!-- ========   Change your logo from here   ============ -->
-        <img src="../assets/images/logo-dark.svg" class="img-fluid logo-lg" alt="logo">
-        <span class="badge bg-light-success rounded-pill ms-2 theme-version">@TempData["version"]</span>
+        @* <img src="../assets/images/logo-dark.svg" class="img-fluid logo-lg" alt="logo"> *@
+        <i class="fas fa-chalkboard-teacher img-fluid logo-lg"></i><span class="text-black font-semibold mx-2" >Gestión Docente</span>
+        <span class="badge bg-light-success rounded-pill theme-version">@TempData["version"]</span>
       </a>
     </div>
     <div class="navbar-content">
