Cambio para que el inicio redireccione al controlador Home.

--- a/GestionDocente.MVCAspNetCoreApp/Views/Shared/_breadcrumb.cshtml
+++ b/GestionDocente.MVCAspNetCoreApp/Views/Shared/_breadcrumb.cshtml
@@ -4,7 +4,7 @@
     <div class="row align-items-center">
       <div class="col-md-12">
         <ul class="breadcrumb">
-          <li class="breadcrumb-item"><a href="@Url.Action("Index", "Dashboard")">Home</a></li>
+          <li class="breadcrumb-item"><a href="@Url.Action("Index", "Home")">Inicio</a></li>
           <li class="breadcrumb-item"><a href="javascript: void(0)">@ViewBag.BreadcrumItem</a></li>
           <li class="breadcrumb-item" aria-current="page">@ViewBag.BreadcrumbItemActive</li>
         </ul>
