Hago más grande el logo en la barra lateral y edito el ascento de Gestión Docente.

--- a/GestionDocente.MVCAspNetCoreApp/Views/Shared/_sidebar.cshtml
+++ b/GestionDocente.MVCAspNetCoreApp/Views/Shared/_sidebar.cshtml
@@ -5,7 +5,7 @@
       <a href="@Url.Action("Index", "Home")" class="b-brand text-primary">
         <!-- ========   Change your logo from here   ============ -->
         @* <img src="../assets/images/logo-dark.svg" class="img-fluid logo-lg" alt="logo"> *@
-        <i class="fas fa-chalkboard-teacher img-fluid logo-lg"></i><span class="text-black font-semibold mx-2" >Gestión Docente</span>
+                <i class="fas fa-chalkboard-teacher fa-lg img-fluid logo-lg"></i><span class="text-black font-semibold mx-2">GestiÃ³n Docente</span>
         <span class="badge bg-light-success rounded-pill theme-version">@TempData["version"]</span>
       </a>
     </div>
